--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.6",
     "expo": "^35.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -15,11 +16,12 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-safe-area-context": "^0.3.6",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-web": "^0.11.7",
     "react-navigation": "^4.0.10",
-    "react-navigation-stack": "^1.10.3",
-    "react-navigation-tabs": "^2.5.6"
+    "react-navigation-stack": "^2.0.15",
+    "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
