--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.6",
-    "expo": "^35.0.0",
-    "react": "16.8.3",
-    "react-dom": "16.8.3",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "@react-native-community/masked-view": "0.1.10",
+    "expo": "^39.0.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-reanimated": "^1.2.0",
-    "react-native-safe-area-context": "^0.3.6",
-    "react-native-screens": "^1.0.0-alpha.23",
-    "react-native-web": "^0.11.7",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-web": "~0.13.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.15",
     "react-navigation-tabs": "^2.7.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^7.1.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
